tests/ucc/bind/good/continue-in-while.c
int main(void)
{
    int a = 0;

    while (a)
    {
        continue;
    }
}
