tests/ucc/bind/bad/continue-in-main.c
int main(void)
{
    int a = 0;

    continue;

    return a;
}
